--- a/TMS_task_management_system/TMS_task_management_system.csproj
+++ b/TMS_task_management_system/TMS_task_management_system.csproj
@@ -75,6 +75,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ApplicationContext.cs" />
+    <Compile Include="ApplicationViewModel.cs" />
+    <Compile Include="RelayCommand.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="TaskWindow.xaml.cs">
       <DependentUpon>TaskWindow.xaml</DependentUpon>
